# python-styleguide

./: black-style.toml  coverage-style.toml  dependencies.toml  file-structure.toml  flake8-style.toml  isort-style.toml  mypy-style.toml  nitpick-style.toml  nitpitck-style.toml  poetry-style.toml  pyproject.toml  pytest-style.toml  tox-settings.toml
