[tool.poetry]
name = "python_styleguide"
version = "0.2.0"
description = ""
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
tox = "^3.15"
pytest = "^6.0"
pytest-cov = "^2.9"
coverage = {version = "^5.1", extras = ["toml"]}
coverage2clover = "^2.0"
wemake-python-styleguide = "^0.14"
black = "^19.10b0"
isort = "^4.3"
flake8 = "^3.8"
pre-commit = "^2.4"
mypy = "^0.782"
nitpick = "^0.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
